Частично реализована redux - логика для корзины: создана возможность добавлять и удалять товары в store корзины на главной странице

--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -28,6 +28,7 @@
   font-weight: 400;
   font-size: 16px;
   opacity: 0.5;
+  cursor: pointer;
 }
 .cart .cleaning__icon {
   top: 0;
@@ -35,6 +36,7 @@
   position: absolute;
   max-width: 27px;
   opacity: 0.5;
+  cursor: pointer;
 }
 .cart__options {
   padding-top: 10px;
