--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -30,6 +30,7 @@
       font-weight: 400;
       font-size: 16px;
       opacity: 0.5;
+      cursor: pointer;
     }
     &__icon {
       top: 0;
@@ -37,6 +38,7 @@
       position: absolute;
       max-width: 27px;
       opacity: 0.5;
+      cursor: pointer;
     }
   }
   &__body {
