--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -49,6 +49,11 @@
   padding: 3px;
   opacity: 0.4;
   position: relative;
+  cursor: pointer;
+}
+.item__del:hover {
+  opacity: 0.8;
+  background-color: #e8e8e8;
 }
 
 .del {
@@ -70,24 +75,14 @@
   position: relative;
   border-radius: 50%;
   border: 2px solid #437ec7;
+  font-size: 25px;
+  line-height: 20px;
+  cursor: pointer;
 }
-.button__count .minus {
-  max-width: 15px;
-  position: absolute;
-  left: 3px;
-  top: 3px;
-}
-.button__count .plus {
-  max-width: 10px;
-  position: absolute;
-  left: 5px;
-  top: 5px;
-}
-.button__icon {
-  max-width: 20px;
-  position: absolute;
-  top: -7px;
-  left: 11px;
+.button__count:hover {
+  background-color: #437ec7;
+  color: white;
+  border: 2px solid rgba(3, 3, 3, 0.31);
 }
 
 /*# sourceMappingURL=CartItem.module.css.map */
