--- a/src/components/CartItem/CartItem.module.scss
+++ b/src/components/CartItem/CartItem.module.scss
@@ -48,6 +48,11 @@
     padding: 3px;
     opacity: 0.4;
     position: relative;
+    cursor: pointer;
+    &:hover {
+      opacity: 0.8;
+      background-color: #e8e8e8;
+    }
   }
 }
 .del {
@@ -66,26 +71,16 @@
     width: 25px;
     height: 25px;
     position: relative;
-
-    .minus {
-      max-width: 15px;
-      position: absolute;
-      left: 3px;
-      top: 3px;
-    }
-    .plus {
-      max-width: 10px;
-      position: absolute;
-      left: 5px;
-      top: 5px;
-    }
     border-radius: 50%;
     border: 2px solid #437ec7;
-  }
-  &__icon {
-    max-width: 20px;
-    position: absolute;
-    top: -7px;
-    left: 11px;
+    font-size: 25px;
+    line-height: 20px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #437ec7;
+      color: white;
+      border: 2px solid rgba(3, 3, 3, 0.31);
+    }
   }
 }
