--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-grow: 1.5;
+  flex-basis: 300px;
 }
 .item__name {
   font-weight: 700;
