--- a/src/components/CartItem/CartItem.module.scss
+++ b/src/components/CartItem/CartItem.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    flex-grow: 1.5;
+    flex-basis: 300px;
   }
   &__name {
     font-weight: 700;
