--- a/src/pages/Layout/Layout.module.scss
+++ b/src/pages/Layout/Layout.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   max-width: 1340px;
-  margin: 40px auto;
+  margin: 0 auto;
+  padding-top: 40px;
 }
 .container {
   padding: 0 50px 50px 50px;
